Bug 368950 atk_object_notify_state_change triggers gobject critical warning when accessibility is turned patch by Evan.Yan at sun.com r=aaronleventhal